Fixed text-wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -208,8 +208,6 @@ code {
   padding-bottom: 2%;
   font-family: 'Roboto Slab', serif;
   font-size: clamp(14px, 6vw, 42px);
-  -webkit-text-stroke-width: 0.25px;
-  -webkit-text-stroke-color: #fff7ed;
   line-height: 1.3em;
   font-weight: 400;
 }
@@ -241,15 +239,16 @@ button:hover {
 }
 
 .about img {
-  position: absolute;
+  /* position: absolute; */
   left: auto;
   right: 0%;
   top: 0%;
   bottom: 0%;
   display: block;
   width: 50%;
-  margin-top: 10%;
+  margin-top: -5%;
   margin-right: -50%;
+  float: right;
 }
 
 @media screen and (max-width: 1400px) {
@@ -259,7 +258,7 @@ button:hover {
     top: 0%;
     bottom: 0%;
     width: 35%;
-    margin-top: 5%;
+    margin-top: -2%;
     margin-right: -5%;
     margin-left: 0%;
   }
@@ -272,7 +271,8 @@ button:hover {
     top: 0%;
     bottom: 0%;
     width: 35%;
-    margin-right: -5%;
+    margin-top: -5%;
+    margin-right: 0%;
   }
 }
 
